<resources>
    <string name="app_name">Fashol Seller</string>
    <string name="notifications">Notifications</string>
    <string name="new_order">New Order</string>
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_board">Notice Board</string>
    <string name="see_more">See More</string>
    <string name="notice_item_sample">আসছে ১৯/১২/২০২২ তারিখ থেকে অফিস পূর্ণরায় যথা নিয়মে চলবে। সকলকে যথা সময় অফিসে আসার জন্য বিশেষ ভাবে বলা হছে। আসছে ১৯/১২/২০২২ তারিখ থেকে অফিস পূর্ণরায় যথা নিয়মে চলবে। সকলকে যথা সময় অফিসে আসার জন্য বিশেষ ভাবে বলা হছে।</string>
    <string name="total_sell">......</string>
    <string name="_230">…</string>
    <string name="all_order">All Order</string>
    <string name="order_list">Order List</string>
    <string name="order_detail">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="t_price">T. Price</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Mehedi Hasan</string>
    <string name="top_customer">Top Customer</string>
    <string name="customer_list">Customer List</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="daily_report">Daily Report</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="phone_sample">01700000123</string>
    <string name="x">X</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="f_od234982">F_OD234982</string>
    <string name="bbq_restaurant">BBQ Restaurant</string>
    <string name="_2000">0 tk</string>
    <string name="shop_name_sample">Vai Vai Store</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello">Hello</string>
    <string name="user_profile">User Profile</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="select_customer">Select Customer</string>
    <string name="this_month">This Month</string>
    <string name="due">Due</string>
    <string name="total">Total</string>
    <string name="basic_information">Basic Information</string>
    <string name="location">Location</string>
    <string name="due_management">Due Management</string>
    <string name="product_name">Product Name</string>
    <string name="details">Details</string>
    <string name="_0">0</string>
    <string name="product_name_sample">টমেটো</string>
    <string name="unit_">একক :</string>
    <string name="kg">কেজি</string>
    <string name="price_">দাম :</string>
    <string name="price_sample">২৫</string>
    <string name="item_price">দাম: ২৫ * ৫ = ১২৫ tk</string>
    <string name="variant_">ভারিয়েন্ট :</string>
    <string name="quantity_">পরিমাণ :</string>
    <string name="note">Note: </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item">Item:</string>
    <string name="_20">20</string>
    <string name="separator">|</string>
    <string name="_20_000_tk">20,000 tk</string>
    <string name="submit">Submit</string>
    <string name="multiple_sign">*</string>
    <string name="remove">Remove</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="customer_name_sample">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="nid_number">NID Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="store_name">Store Name</string>
    <string name="cancel">Cancel</string>
    <string name="order_place_confirm">Order Place Confirm</string>
    <string name="view_profile">View Orders</string>
    <string name="login_with_fashol">Login with Fashol</string>
    <string name="category_list">Category List</string>
    <string name="product_list">Product List</string>
    <string name="status">Status</string>
    <string name="date_sample">03-Dec-2022</string>
    <string name="sample_address">Town hall Market</string>
    <string name="order_id">Order ID: RO 89833422</string>
    <string name="order_details">-----Order Details-----</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="variant">Variant</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="poteto">Poteto</string>
    <string name="big_potatoes">Big Potatoes</string>
    <string name="office_notice">Office Notice</string>
    <string name="taka"> টাকা</string>
    <string name="total_bangala">মোট :</string>
    <string name="no_item_in_cart">No item in Cart</string>
    <string name="_variant">(Variant)</string>
    <string name="write_spacial_requirements">Write spacial requirements</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="up_coming">up coming…</string>
    <string name="no_product_available">No Product Available</string>
    <string name="no_customer_available">No Customer Available</string>
    <string name="order_no">Order No:</string>
    <string name="price">Price</string>
    <string name="location_permission">Location Permission</string>
    <string name="without_permission_you_can_t_use_this_app">Without Permission you can\'t use this app</string>

</resources>