<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_icon_material_dashboard"
            android:title="@string/dashboard"/>

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_icon_awesome_user"
            android:title="@string/profile"/>

        <item android:id="@+id/nav_order"
            android:icon="@drawable/ic_icon_ionic_ios_cart"
            android:title="@string/order"/>

        <item android:id="@+id/nav_report"
            android:icon="@drawable/ic_icon_ionic_md_paper"
            android:title="@string/daily_report"/>

        <item android:id="@+id/nav_customer"
            android:icon="@drawable/ic_icon_awesome_handshake"
            android:title="@string/customer"/>

        <item android:id="@+id/nav_setting"
            android:icon="@drawable/ic_icon_feather_settings"
            android:title="@string/setting"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_icon_open_account_logout"
            android:title="@string/logout"/>

    </group>

</menu>
