<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="1dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="3dp"
    android:outlineSpotShadowColor="@color/black"
    android:outlineAmbientShadowColor="@color/green"
    app:cardUseCompatPadding="true"
    tools:targetApi="p">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp">

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/date_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/customer_name"
        android:textColor="@color/ash"
        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
        app:layout_constraintStart_toStartOf="@+id/tvOrderId"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderId" />

    <TextView
        android:id="@+id/tvCustomerAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/sample_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvCustomerName"
        app:layout_constraintStart_toStartOf="@+id/tvCustomerName" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/tvOrderStatus"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <ImageView
        android:id="@+id/ivStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/variant"
        android:src="@drawable/ic_baseline_circle_dot"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrderStatus"
        app:layout_constraintEnd_toStartOf="@+id/tvOrderStatus" />

    <TextView
        android:id="@+id/tvOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDate" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>