<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/btnOpenMenu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_open_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:src="@drawable/ic_ios_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnNewOrder"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/new_order"
        android:src="@drawable/ic_feather_plus_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNotification"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <ImageButton
        android:id="@+id/btnNotification"
        android:layout_width="24dp"
        android:layout_height="28dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/notifications"
        android:src="@drawable/ic_ios_notifications_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnFilter"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_feather_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCustomerAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/customer_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCustomerAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCustomerDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/details"
        android:textColor="@color/white"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_feather_chevron_down"
        app:layout_constraintStart_toEndOf="@+id/ivCustomerAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerName" />


    <ImageButton
        android:id="@+id/btnCart"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_feather_shopping_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvChartNumberOfItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCart"
        app:layout_constraintBottom_toTopOf="@+id/btnCart" />


</androidx.constraintlayout.widget.ConstraintLayout>