<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tvOrderNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/f_od234982"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/bbq_restaurant"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/ibOrderDetails"
            app:layout_constraintStart_toStartOf="@+id/tvOrderNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/_2000"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="@+id/tvOrderNumber"
            app:layout_constraintStart_toStartOf="@+id/tvOrderNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibOrderDetails"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/setting"
            android:src="@drawable/ic_circle_details_21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
